# dahasys_gui

./: .gitignore  AGENTS.md  CLAUDE.MD  CREATE_TABLES.sql  DB_SCHEMA_FULL.txt  ER_DIAGRAM.md  README.md  clear_db.py  fix_pdf.py  graph.md  migrate_mdb.py  minias_app.py  pyproject.toml  run_minias.bat  session-ses_3064.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/v1.0-phases/01-package-scaffold-leaf-models/: 01-CONTEXT.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-service-module-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-dialogs-app-shell-entry-point/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/01-package-scaffold-leaf-models/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-service-module-extraction/: 02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-dialogs-app-shell-entry-point/: 03-02-PLAN.md  03-VERIFICATION.md
.planning/phases/04-bug-fixes-dead-code-removal/: 04-01-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-deduplication-code-quality/: 05-02-PLAN.md
.planning/phases/06-method-decomposition/: 06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
minias/: __init__.py  __main__.py  app.py  calculator.py  certificate.py  database.py  dialogs.py  excel_export.py  minias.db  models.py  serial_comm.py
resources/: form.xlsx
(+9 files in other folders)
