[project]
name = "minias-complete-package"
version = "1.0.0"
description = "MINIAS Probe Testing System - Python 재구현"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "pyodbc>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minias"]

[project.scripts]
minias = "minias.app:main"
